# rust_projects

./: Cargo.toml
real_time_chat_system/: .env  Cargo.toml
real_time_chat_system/migrations/: 0001_create_users_table.sql  0002_create_rooms_table.sql  0003_create_messages_table.sql
real_time_chat_system/src/: main.rs
real_time_chat_system/src/api/: auth.rs  chat.rs  message.rs  mod.rs  presence.rs
real_time_chat_system/src/tests/: chat_test.rs  mod.rs
real_time_chat_system/src/utils/: jwt.rs
scm/src/auth/: mod.rs
scm/src/controller/: contact_controller.rs  mod.rs  user_controller.rs
scm/src/entities/: contacts.rs  mod.rs
sketch_monk_rust_task/: .env  Cargo.toml  diesel.toml
sketch_monk_rust_task/migrations/2025-04-24-180708_create_users/: up.sql
sketch_monk_rust_task/migrations/2025-04-24-181017_create_posts/: up.sql
sketch_monk_rust_task/migrations/2025-04-25-200811_create_posts_tags/: up.sql
sketch_monk_rust_task/src/: db.rs  error.rs  main.rs  model.rs  routes.rs  schema.rs
smart_contact_manager/src/: main.rs
smart_contact_manager/src/auth/: cors.rs
smart_contact_manager/src/controller/: google_login.rs  token_verification.rs
smart_contact_manager/src/db/: mod.rs
smart_contact_manager/src/entities/: users.rs
smart_contact_manager/src/migrator/: mod.rs
src/entities/: prelude.rs
src/migrator/: m20220101_000001_create_user_table.rs
