[package]
name = "demo_rust"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = {version="0.5.1",features=["json"]}
sea-orm= {version = "1.1.5", features = [
    "sqlx-postgres",
    "runtime-async-std-native-tls",
    "macros",
]}
sea-orm-migration="1.1.5"
bcrypt="*"
jsonwebtoken = "8.3"
chrono = "0.4"    
rocket_cors = "0.6.0"
oauth2 = "4.2"
reqwest = { version = "0.11", features = ["json"] }    # For making HTTP requests to Google's token verification endpoint
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"    # For JSON parsing