[package]
name = "real-timechat"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features =["full"]}
sqlx = { version="0.7", features = ["runtime-tokio-native-tls", "postgres"]}
serde ={ version = "1.0" , features = ["derive"]}
serde_json = "1.0"
dotenv="*"
axum={version="0.6",features=["ws"]}
bcrypt="0.14"
jsonwebtoken="*"
futures="*"
futures-util="*"
redis= {version="0.23", features=["aio","tokio-comp"]}
tokio-test = "0.4"
mockall = "0.11"
tower="*"
tokio-tungstenite="*"
url="*"